--- a/rmngb/NEWS
+++ b/rmngb/NEWS
@@ -1,3 +1,10 @@
+Version 0.5-1 (2014-09-21)
+-------------------------------------------------------------------
+New features
+ * added interleave.
+Misc
+  * git integration.
+
 Version 0.4-1 (2014-06-07)
 -------------------------------------------------------------------
 New features
