--- a/rmngb/NEWS
+++ b/rmngb/NEWS
@@ -1,5 +1,7 @@
 Version 0.6-1 (2014-10-13)
 -------------------------------------------------------------------
+Fixes
+ * modified DESCRIPTION file.
 New features
  * added mergeV.
 Removed
